--- a/collection.html
+++ b/collection.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thanh pho ho chi minh">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -90,91 +90,91 @@ https://templatemo.com/tm-579-cyborg-gaming
         <div class="page-content">
 
           <!-- ***** Colection Start ***** -->
-            <div class="row">
-              <div class="col-lg-12">
-                <div class="gaming-library header-text">
-                  <div class="heading-section">
-                    <h4>Các <em> Sneaker Collections</em></h4>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="gaming-library header-text">
+                <div class="heading-section">
+                  <h4>Các <em> Sneaker Collections</em></h4>
+                </div>
+                <div class="row">
+                  <div class="item">
+                    <ul>
+                      <li><img src="assets/images/sneaker_img/nike-logo.jpg" alt="" class="templatemo-item"></li>
+                      <li>
+                        <h4>Nike</h4><span>Sneaker</span>
+                      </li>
+                      <li>
+                        <h4>Số lượng</h4><span>23</span>
+                      </li>
+                      <li>
+                        <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.8</span>
+                      </li>
+
+                      <li>
+                        <div class="main-border-button"><a href="#">Khám phá</a></div>
+                      </li>
+                    </ul>
                   </div>
-                  <div class="row">
-                    <div class="item" >
-                      <ul> 
-                        <li><img src="assets/images/sneaker_img/nike-logo.jpg" alt=""   class="templatemo-item"></li>
-                        <li>
-                          <h4>Nike</h4><span>Sneaker</span>
-                        </li>
-                        <li>
-                          <h4>Số lượng</h4><span>23</span>
-                        </li>
-                        <li>
-                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.8</span>
-                        </li>
-                    
-                        <li>
-                          <div class="main-border-button"><a href="#">Khám phá</a></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="item">
-                      <ul>
-                        <li><img src="assets/images/sneaker_img/adidas-logo.jpg" alt="" class="templatemo-item"></li>
-                        <li>
-                          <h4>Adidas</h4><span>Sneaker</span>
-                        </li>
-                        <li>
-                          <h4>Số lượng</h4><span>34</span>
-                        </li>
-                        <li>
-                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>3.9</span>
-                        </li>
-                        <li>
-                          <div class="main-border-button"><a href="#">Khám phá</a></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="item">
-                      <ul>
-                        <li><img src="assets/images/sneaker_img/vans-logo.jpg" alt="" class="templatemo-item"></li>
-                        <li>
-                          <h4>Vans</h4><span>Sneaker</span>
-                        </li>
-                        <li>
-                          <h4>Số lượng</h4><span>28</span>
-                        </li>
-                        <li>
-                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.2</span>
-                        </li>
-                        <li>
-                          <div class="main-border-button"><a href="#">Khám phá</a></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="item last-item">
-                      <ul>
-                        <li><img src="assets/images/sneaker_img/puma-logo.jpg" alt="" class="templatemo-item"></li>
-                        <li>
-                          <h4>Puma</h4><span>Sneaker</span>
-                        </li>
-                        <li>
-                          <h4>Số lượng</h4><span>25</span>
-                        </li>
-                        <li>
-                          <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.5</span>
-                        </li>
-                        <li>
-                          <div class="main-border-button"><a href="#">Khám phá</a></div>
-                        </li>
-                      </ul>
-                    </div>
+                  <div class="item">
+                    <ul>
+                      <li><img src="assets/images/sneaker_img/adidas-logo.jpg" alt="" class="templatemo-item"></li>
+                      <li>
+                        <h4>Adidas</h4><span>Sneaker</span>
+                      </li>
+                      <li>
+                        <h4>Số lượng</h4><span>34</span>
+                      </li>
+                      <li>
+                        <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>3.9</span>
+                      </li>
+                      <li>
+                        <div class="main-border-button"><a href="#">Khám phá</a></div>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="item">
+                    <ul>
+                      <li><img src="assets/images/sneaker_img/vans-logo.jpg" alt="" class="templatemo-item"></li>
+                      <li>
+                        <h4>Vans</h4><span>Sneaker</span>
+                      </li>
+                      <li>
+                        <h4>Số lượng</h4><span>28</span>
+                      </li>
+                      <li>
+                        <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.2</span>
+                      </li>
+                      <li>
+                        <div class="main-border-button"><a href="#">Khám phá</a></div>
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="item last-item">
+                    <ul>
+                      <li><img src="assets/images/sneaker_img/puma-logo.jpg" alt="" class="templatemo-item"></li>
+                      <li>
+                        <h4>Puma</h4><span>Sneaker</span>
+                      </li>
+                      <li>
+                        <h4>Số lượng</h4><span>25</span>
+                      </li>
+                      <li>
+                        <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.5</span>
+                      </li>
+                      <li>
+                        <div class="main-border-button"><a href="#">Khám phá</a></div>
+                      </li>
+                    </ul>
                   </div>
                 </div>
               </div>
             </div>
-   
+          </div>
+
           <!-- ***** Collection End ***** -->
-<br>
-           <!-- ***** Featured Games Start ***** -->
-           <div class="row">
+          <br>
+          <!-- ***** Featured Games Start ***** -->
+          <div class="row">
             <div class="col-lg-12">
               <div class="featured-games header-text">
                 <div class="heading-section">
@@ -183,7 +183,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="owl-features owl-carousel">
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -196,7 +198,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -209,7 +213,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/air-jordan-1-hi-trophy-room-chicago-da2728-100-king-shoes-sneaker-real-hcm-1624273272 (1).jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/air-jordan-1-hi-trophy-room-chicago-da2728-100-king-shoes-sneaker-real-hcm-1624273272 (1).jpeg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -222,7 +228,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/ci0919-117-giay-nike-air-force-1-shadow-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/ci0919-117-giay-nike-air-force-1-shadow-chinh-hang-gia-tot-den-king-shoes-12.jpeg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -235,7 +243,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/ef1183-giày-adidas-alphaboost-chính-hãng-dến-king-shoes-1-1653289514.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/ef1183-giày-adidas-alphaboost-chính-hãng-dến-king-shoes-1-1653289514.jpg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -248,7 +258,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="item">
                     <div class="thumb">
-                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg" alt="">
+                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg"
+                        alt="">
                       <div class="hover-effect">
                         <h6>Chi tiết</h6>
                       </div>
@@ -262,36 +273,36 @@ https://templatemo.com/tm-579-cyborg-gaming
                 </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Thu Duc, Ho Chi Minh, Viet Nam
+              <br>
 
-            <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-            Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-          </p>
+              Giay sneaker, giay sneaker outles, giay sneaker gia re, giay sneaker saigon
+            </p>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
 
-  <!-- Scripts -->
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/tabs.js"></script>
-  <script src="assets/js/popup.js"></script>
-  <script src="assets/js/custom.js"></script>
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/tabs.js"></script>
+    <script src="assets/js/popup.js"></script>
+    <script src="assets/js/custom.js"></script>
 
 
 </body>
