--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thanh pho ho chi minh">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -21,13 +21,6 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <link rel="stylesheet" href="assets/css/animate.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-  <!--
-
-TemplateMo 579 Cyborg Gaming
-
-https://templatemo.com/tm-579-cyborg-gaming
-
--->
 </head>
 
 <body>
@@ -115,93 +108,104 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-01.jpg" alt="">
-                      <h4>Fortnite<br><span>Sandbox</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/sneaker-c77124-super-star-adidas-kingshoes.vn-tphcm-tanbinh-27-1628053703.jpeg"
+                        alt="">
+                      <h4>Star</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 1,900,000 đ</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-02.jpg" alt="">
-                      <h4>PubG<br><span>Battle S</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg"
+                        alt="">
+                      <h4>BOOST</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 1,950,000 đ</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-03.jpg" alt="">
-                      <h4>Dota2<br><span>Steam-X</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/SNEAKER-315122-111-AIR-FORCE-1-07-NIKE-KINGSHOES.VN-TPHCM-TANBINH-17-logo-1551924204-.jpg"
+                        alt="">
+                      <h4>FORCE</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 2,300,000 đ</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-04.jpg" alt="">
-                      <h4>CS-GO<br><span>Legendary</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/jordan-1-mid-tuft-orange-bq6931-802-king-shoes-sneaker-real-hcm-1624273330.jpeg"
+                        alt="">
+                      <h4>COURT</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 1,500,000 đ</li>
                       </ul>
                     </div>
                   </div>
-                  <div class="col-lg-6">
-                    <div class="item">
-                      <div class="row">
-                        <div class="col-lg-6 col-sm-6">
-                          <div class="item inner-item">
-                            <img src="assets/images/popular-05.jpg" alt="">
-                            <h4>Mini Craft<br><span>Legendary</span></h4>
-                            <ul>
-                              <li><i class="fa fa-star"></i> 4.8</li>
-                              <li><i class="fa fa-download"></i> 2.3M</li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-6">
-                          <div class="item">
-                            <img src="assets/images/popular-06.jpg" alt="">
-                            <h4>Eagles Fly<br><span>Matrix Games</span></h4>
-                            <ul>
-                              <li><i class="fa fa-star"></i> 4.8</li>
-                              <li><i class="fa fa-download"></i> 2.3M</li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-07.jpg" alt="">
-                      <h4>Warface<br><span>Max 3D</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/cd7069-105-giay-nike-air-jordan-legacy-312-low-chinh-hang-gia-tot-den-king-shoes-6.jpeg"
+                        alt="">
+                      <h4>MAX</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 2,900,000 đ</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/popular-08.jpg" alt="">
-                      <h4>Warcraft<br><span>Legend</span></h4>
+                      <img
+                        src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg"
+                        alt="">
+                      <h4>YEEZY</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
-                        <li><i class="fa fa-download"></i> 2.3M</li>
+                        <li><i class="fa fa-download"></i> 1,350,000 đ</li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img
+                        src="assets/images/sneaker_img/giày-adidas-ultraboost-trắng-fz4007-chính-hãng-dến-king-shoes-1-1647670125.jpg"
+                        alt="">
+                      <h4>DNA</h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 1,500,000 đ</li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-6">
+                    <div class="item">
+                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg"
+                        alt="">
+                      <h4>NMD_R1</h4>
+                      <ul>
+                        <li><i class="fa fa-star"></i> 4.8</li>
+                        <li><i class="fa fa-download"></i> 1,700,000 đ</li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="browse.html">Discover Popular</a>
+                      <a href="product.html">Nhiều hơn nữa</a>
                     </div>
                   </div>
                 </div>
@@ -218,85 +222,78 @@ https://templatemo.com/tm-579-cyborg-gaming
               </div>
               <div class="item">
                 <ul>
-                  <li><img src="assets/images/game-01.jpg" alt="" class="templatemo-item"></li>
+                  <li><img src="assets/images/sneaker_img/nike-logo.jpg" alt="" class="templatemo-item"></li>
                   <li>
-                    <h4>Dota 2</h4><span>Sandbox</span>
+                    <h4>Nike</h4><span>Sneaker</span>
                   </li>
                   <li>
-                    <h4>Date Added</h4><span>24/08/2036</span>
+                    <h4>Số lượng</h4><span>23</span>
                   </li>
                   <li>
-                    <h4>Hours Played</h4><span>634 H 22 Mins</span>
+                    <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.8</span>
                   </li>
+
                   <li>
-                    <h4>Currently</h4><span>Downloaded</span>
-                  </li>
-                  <li>
-                    <div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
-                  </li>
-                </ul>
-              </div>
-              <div class="item">
-                <ul>
-                  <li><img src="assets/images/game-02.jpg" alt="" class="templatemo-item"></li>
-                  <li>
-                    <h4>Fortnite</h4><span>Sandbox</span>
-                  </li>
-                  <li>
-                    <h4>Date Added</h4><span>22/06/2036</span>
-                  </li>
-                  <li>
-                    <h4>Hours Played</h4><span>740 H 52 Mins</span>
-                  </li>
-                  <li>
-                    <h4>Currently</h4><span>Downloaded</span>
-                  </li>
-                  <li>
-                    <div class="main-border-button"><a href="#">Donwload</a></div>
-                  </li>
-                </ul>
-              </div>
-              <div class="item last-item">
-                <ul>
-                  <li><img src="assets/images/game-03.jpg" alt="" class="templatemo-item"></li>
-                  <li>
-                    <h4>CS-GO</h4><span>Sandbox</span>
-                  </li>
-                  <li>
-                    <h4>Date Added</h4><span>21/04/2036</span>
-                  </li>
-                  <li>
-                    <h4>Hours Played</h4><span>892 H 14 Mins</span>
-                  </li>
-                  <li>
-                    <h4>Currently</h4><span>Downloaded</span>
-                  </li>
-                  <li>
-                    <div class="main-border-button border-no-active"><a href="#">Donwloaded</a></div>
+                    <div class="main-border-button"><a href="#">Khám phá</a></div>
                   </li>
                 </ul>
               </div>
             </div>
-            <div class="col-lg-12">
-              <div class="main-button">
-                <a href="profile.html">View Your Library</a>
-              </div>
+            <div class="item">
+              <ul>
+                <li><img src="assets/images/sneaker_img/adidas-logo.jpg" alt="" class="templatemo-item"></li>
+                <li>
+                  <h4>Adidas</h4><span>Sneaker</span>
+                </li>
+                <li>
+                  <h4>Số lượng</h4><span>34</span>
+                </li>
+                <li>
+                  <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>3.9</span>
+                </li>
+                <li>
+                  <div class="main-border-button"><a href="#">Khám phá</a></div>
+                </li>
+              </ul>
+            </div>
+            <div class="item last-item">
+              <ul>
+                <li><img src="assets/images/sneaker_img/vans-logo.jpg" alt="" class="templatemo-item"></li>
+                <li>
+                  <h4>Vans</h4><span>Sneaker</span>
+                </li>
+                <li>
+                  <h4>Số lượng</h4><span>28</span>
+                </li>
+                <li>
+                  <h4>Đánh giá</h4><i class="fa fa-star" style="color:yellow"></i><span></i>4.2</span>
+                </li>
+                <li>
+                  <div class="main-border-button"><a href="#">Khám phá</a></div>
+                </li>
+              </ul>
             </div>
           </div>
-          <!-- ***** Gaming Library End ***** -->
+          <div class="col-lg-12">
+            <div class="main-button">
+              <a href="collection.html">Xem them</a>
+            </div>
+          </div>
         </div>
+        <!-- ***** Gaming Library End ***** -->
       </div>
     </div>
+  </div>
   </div>
 
   <footer>
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+          <p>Thu Duc, Ho Chi Minh, Viet Nam
+            <br>
 
-            <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-            Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            Giay sneaker, giay sneaker outles, giay sneaker gia re, giay sneaker saigon
           </p>
         </div>
       </div>
