--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@ aa
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thanh pho ho chi minh">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -68,7 +68,7 @@ https://templatemo.com/tm-579-cyborg-gaming
             <!-- ***** Search End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li><a href="index.html" >Trang chủ</a></li>
+              <li><a href="index.html">Trang chủ</a></li>
               <li><a href="product.html" class="active">Sản phẩm</a></li>
               <li><a href="collection.html">Bộ sưu tập</a></li>
               <li><a href="blog.html">Blog</a></li>
@@ -103,7 +103,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="row">
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/sneaker-c77124-super-star-adidas-kingshoes.vn-tphcm-tanbinh-27-1628053703.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/sneaker-c77124-super-star-adidas-kingshoes.vn-tphcm-tanbinh-27-1628053703.jpeg"
+                        alt="">
                       <h4>Star</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -113,7 +115,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/adidas-ultraboost-20-metallic-gold-fv83511-king-shoes-sneaker-real-hcm-1624253902.jpeg"
+                        alt="">
                       <h4>BOOST</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -123,7 +127,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/SNEAKER-315122-111-AIR-FORCE-1-07-NIKE-KINGSHOES.VN-TPHCM-TANBINH-17-logo-1551924204-.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/SNEAKER-315122-111-AIR-FORCE-1-07-NIKE-KINGSHOES.VN-TPHCM-TANBINH-17-logo-1551924204-.jpg"
+                        alt="">
                       <h4>FORCE</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -133,7 +139,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/nike-dunk-hi-cu7544-400-king-shoes-sneaker-real-hcm35-1623475900.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/nike-dunk-hi-cu7544-400-king-shoes-sneaker-real-hcm35-1623475900.jpg"
+                        alt="">
                       <h4>DUNK</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -143,7 +151,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/jordan-1-mid-tuft-orange-bq6931-802-king-shoes-sneaker-real-hcm-1624273330.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/jordan-1-mid-tuft-orange-bq6931-802-king-shoes-sneaker-real-hcm-1624273330.jpeg"
+                        alt="">
                       <h4>COURT</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -153,7 +163,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/ci0919-117-giay-nike-air-force-1-shadow-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/ci0919-117-giay-nike-air-force-1-shadow-chinh-hang-gia-tot-den-king-shoes-12.jpeg"
+                        alt="">
                       <h4>JORDAN</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -163,7 +175,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/dh2482-100-giay-nike-kwondo-1-g-dragon-peaceminusone-triple-white-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/dh2482-100-giay-nike-kwondo-1-g-dragon-peaceminusone-triple-white-chinh-hang-gia-tot-den-king-shoes-12.jpeg"
+                        alt="">
                       <h4>BLAZER</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -173,7 +187,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/dh5128-001-giay-nike-air-max-bliss-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/dh5128-001-giay-nike-air-max-bliss-chinh-hang-gia-tot-den-king-shoes-12.jpeg"
+                        alt="">
                       <h4>ZOOM</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -183,7 +199,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/cd7069-105-giay-nike-air-jordan-legacy-312-low-chinh-hang-gia-tot-den-king-shoes-6.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/cd7069-105-giay-nike-air-jordan-legacy-312-low-chinh-hang-gia-tot-den-king-shoes-6.jpeg"
+                        alt="">
                       <h4>MAX</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -193,7 +211,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/adidas-yeezy-boost-350-v2-yeezreel-fw5191-king-shoes-sneaker-real-hcm-1624266288.jpeg"
+                        alt="">
                       <h4>YEEZY</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -203,7 +223,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/giày-adidas-ultraboost-trắng-fz4007-chính-hãng-dến-king-shoes-1-1647670125.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/giày-adidas-ultraboost-trắng-fz4007-chính-hãng-dến-king-shoes-1-1647670125.jpg"
+                        alt="">
                       <h4>DNA</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -213,7 +235,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg" alt="">
+                      <img src="assets/images/sneaker_img/giày-adidas-nmd-r1-gz9289-king-shoes-1-1642591968.jpg"
+                        alt="">
                       <h4>NMD_R1</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -223,7 +246,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/giày-adidas-nasa-nmdr1-spectoo-footwear-white-fx6818-king-shoes-sneaker-real-hcm-1-1636602842.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/giày-adidas-nasa-nmdr1-spectoo-footwear-white-fx6818-king-shoes-sneaker-real-hcm-1-1636602842.jpg"
+                        alt="">
                       <h4>SPECT</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -233,7 +258,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/ct8532-008-giay-nike-air-jordan-3-desert-elephant-chinh-hang-gia-tot-den-king-shoes-12.jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/ct8532-008-giay-nike-air-jordan-3-desert-elephant-chinh-hang-gia-tot-den-king-shoes-12.jpeg"
+                        alt="">
                       <h4>ALPHA</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -243,7 +270,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/air-jordan-1-hi-trophy-room-chicago-da2728-100-king-shoes-sneaker-real-hcm-1624273272 (1).jpeg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/air-jordan-1-hi-trophy-room-chicago-da2728-100-king-shoes-sneaker-real-hcm-1624273272 (1).jpeg"
+                        alt="">
                       <h4>JORH</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -253,7 +282,9 @@ https://templatemo.com/tm-579-cyborg-gaming
                   </div>
                   <div class="col-lg-3 col-sm-6">
                     <div class="item">
-                      <img src="assets/images/sneaker_img/ef1183-giày-adidas-alphaboost-chính-hãng-dến-king-shoes-1-1653289514.jpg" alt="">
+                      <img
+                        src="assets/images/sneaker_img/ef1183-giày-adidas-alphaboost-chính-hãng-dến-king-shoes-1-1653289514.jpg"
+                        alt="">
                       <h4>ALPHA</h4>
                       <ul>
                         <li><i class="fa fa-star"></i> 4.8</li>
@@ -281,10 +312,10 @@ https://templatemo.com/tm-579-cyborg-gaming
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+          <p>Thu Duc, Ho Chi Minh, Viet Nam
+            <br>
 
-            <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
-            Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+            Giay sneaker, giay sneaker outles, giay sneaker gia re, giay sneaker saigon
           </p>
         </div>
       </div>
