--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thanh pho ho chi minh">
+  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thu duc">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -68,8 +68,8 @@ https://templatemo.com/tm-579-cyborg-gaming
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html">Trang chủ</a></li>
-              <li><a href="product.html">Sản phẩm</a></li>
-              <li><a href="collection.html">Bộ sưu tập</a></li>
+              <li><a href="san-pham-sneaker.html">Sản phẩm</a></li>
+              <li><a href="bo-sieu-tap-giay-sneaker.html">Bộ sưu tập</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="cart.html" class="active">Giỏ hàng </a></li>
               </li>
