--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thanh pho ho chi minh">
+  <meta name="discription" content="Vu tru sneaker chuyen cung cap giay gia re, giay outlet tai thu duc">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
@@ -61,8 +61,8 @@
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html" class="active">Trang chủ</a></li>
-              <li><a href="product.html">Sản phẩm</a></li>
-              <li><a href="collection.html">Bộ sưu tập</a></li>
+              <li><a href="san-pham-sneaker.html">Sản phẩm</a></li>
+              <li><a href="bo-sieu-tap-giay-sneaker.html">Bộ sưu tập</a></li>
               <li><a href="blog.html">Blog</a></li>
               <li><a href="cart.html">Giỏ hàng </a></li>
             </ul>
@@ -90,7 +90,7 @@
                   <h6>Chọn giày, chọn phong cách tại</h6>
                   <h4>Vũ trụ <em>Sneaker</em></h4>
                   <div class="main-button">
-                    <a href="product.html">Mua ngay</a>
+                    <a href="san-pham-sneaker.html">Mua ngay</a>
                   </div>
                 </div>
               </div>
@@ -205,7 +205,7 @@
                   </div>
                   <div class="col-lg-12">
                     <div class="main-button">
-                      <a href="product.html">Nhiều hơn nữa</a>
+                      <a href="san-pham-sneaker.html">Nhiều hơn nữa</a>
                     </div>
                   </div>
                 </div>
@@ -276,7 +276,7 @@
           </div>
           <div class="col-lg-12">
             <div class="main-button">
-              <a href="collection.html">Xem them</a>
+              <a href="bo-sieu-tap-giay-sneaker.html">Xem them</a>
             </div>
           </div>
         </div>
