--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Collection</title>
+	<title>Racing Boot</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -69,46 +69,27 @@
 		</div>
 	</div>
 	<!-- new collection section start -->
-	<div class="collection_text">Collection</div>
-	<div class="layout_padding collection_section">
-		<div class="container">
-			<h1 class="new_text"><strong>New Collection</strong></h1>
-			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-			<div class="collection_section_2">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="about-img">
-							<button class="new_bt">New</button>
-							<div class="shoes-img"><img src="images/shoes-img1.png"></div>
-							<p class="sport_text">Men Sports</p>
-							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
-							<div class="star_icon">
-								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-								</ul>
-							</div>
+	<div class="collection_text">Racing Boots</div>
+	<div class="about_main layout_padding">
+		<div class="collection_section">
+			<div class="container">
+				<h1 class="new_text"><strong>Racing Boots</strong></h1>
+				<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+					dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+			</div>
+		</div>
+		<div class="collectipn_section_3 layout_padding">
+			<div class="container">
+				<div class="racing_shoes">
+					<div class="row">
+						<div class="col-md-8">
+							<div class="shoes-img3"><img src="images/shoes-img3.png"></div>
 						</div>
-						<button class="seemore_bt">See More</button>
-					</div>
-					<div class="col-md-6">
-						<div class="about-img2">
-							<div class="shoes-img2"><img src="images/shoes-img2.png"></div>
-							<p class="sport_text">Men Sports</p>
-							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
-							<div class="star_icon">
-								<ul>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-									<li><a href="#"><img src="images/star-icon.png"></a></li>
-								</ul>
-							</div>
+						<div class="col-md-4">
+							<div class="sale_text"><strong>Sale <br><span style="color: #0a0506;">JOGING</span>
+									<br>SHOES</strong></div>
+							<div class="number_text"><strong>$ <span style="color: #0a0506">100</span></strong></div>
+							<button class="seemore">See More</button>
 						</div>
 					</div>
 				</div>
