--- a/shoes.html
+++ b/shoes.html
@@ -10,9 +10,9 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
 	<title>Shoes</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta name="author" content="">
+	<meta name="keywords" content="Vũ trụ Sneaker">
+	<meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
+	<meta name="author" content="Vũ trụ Sneaker Corporation">
 	<!-- bootstrap css -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<!-- style css -->
