--- a/blogs.html
+++ b/blogs.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- site metas -->
-	<title>Racing Boot</title>
+	<title>Blog Giày</title>
 	<meta name="keywords" content="Vũ trụ Sneaker">
 	<meta name="description" content="Vũ trụ Sneaker bán mọi loại giày. Chuyên giày outlet">
 	<meta name="author" content="Vũ trụ Sneaker Corporation">
@@ -53,11 +53,11 @@
 						</button>
 						<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 							<div class="navbar-nav">
-								<a class="nav-item nav-link" href="index.html">Home</a>
-								<a class="nav-item nav-link" href="collection.html">Collection</a>
-								<a class="nav-item nav-link" href="shoes.html">Shoes</a>
+								<a class="nav-item nav-link" href="index.html">Trang chủ</a>
+								<a class="nav-item nav-link" href="collection.html">Bộ sưu tập</a>
+								<a class="nav-item nav-link" href="shoes.html">Sản phẩm</a>
 								<a class="nav-item nav-link" href="blogs.html">Blogs</a>
-								<a class="nav-item nav-link" href="contact.html">Contact</a>
+								<a class="nav-item nav-link" href="contact.html">Liên hệ</a>
 								<a class="nav-item nav-link last" href="#"><img src="images/search_icon.png"></a>
 								<a class="nav-item nav-link last" href="contact.html"><img
 										src="images/shop_icon.png"></a>
@@ -69,11 +69,11 @@
 		</div>
 	</div>
 	<!-- new collection section start -->
-	<div class="collection_text">Racing Boots</div>
+	<div class="collection_text">Blog Giày</div>
 	<div class="about_main layout_padding">
 		<div class="collection_section">
 			<div class="container">
-				<h1 class="new_text"><strong>Racing Boots</strong></h1>
+				<h1 class="new_text"><strong>Các Blog Giày</strong></h1>
 				<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 					dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
 			</div>
@@ -86,10 +86,10 @@
 							<div class="shoes-img3"><img src="images/shoes-img3.png"></div>
 						</div>
 						<div class="col-md-4">
-							<div class="sale_text"><strong>Sale <br><span style="color: #0a0506;">JOGING</span>
-									<br>SHOES</strong></div>
-							<div class="number_text"><strong>$ <span style="color: #0a0506">100</span></strong></div>
-							<button class="seemore">See More</button>
+							<div class="sale_text"><strong>Blog <br><span style="color: #0a0506;">Cách vệ sinh giày</span>
+									<br></strong></div>
+							<!-- <div class="number_text"><strong> <span style="color: #0a0506"></span></strong></div> -->
+							<button class="seemore">XEM THÊM</button>
 						</div>
 					</div>
 				</div>
