--- a/blogs.html
+++ b/blogs.html
@@ -133,40 +133,39 @@
 							dolor sit amet,</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
-						<h2 class="shop_text">Address </h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">No 40 Baria Sreet
-								15/2 NewYork City, NY, United States.</span></div>
+						<h2 class="shop_text">Địa chỉ</h2>
+						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
-						<h2 class="shop_text">Our Company </h2>
+						<h2 class="shop_text">Công ty của chúng tôi</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Delivery</li>
+								<li>Giao hàng</li>
 								<li>Legal Notice</li>
-								<li>About us</li>
-								<li>Secure payment</li>
-								<li>Contact us</li>
+								<li>Về chúng tôi</li>
+								<li>Thanh toán an toàn</li>
+								<li>Liên hệ với chúng tôi</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-3">
-						<h2 class="adderess_text">Products</h2>
+						<h2 class="adderess_text">Sản phẩm</h2>
 						<div class="delivery_text">
 							<ul>
-								<li>Prices drop</li>
-								<li>New products</li>
-								<li>Best sales</li>
-								<li>Contact us</li>
+								<li>Giảm giá</li>
+								<li>Sản phẩm mới</li>
+								<li>Sản phẩm bán chạy nhất</li>
+								<li>Liên hệ với chúng tôi</li>
 								<li>Sitemap</li>
 							</ul>
 						</div>
 					</div>
 					<div class="col-sm-6 col-lg-2">
-						<h2 class="adderess_text">Newsletter</h2>
+						<h2 class="adderess_text">Bản tin</h2>
 						<div class="form-group">
-							<input type="text" class="enter_email" placeholder="Enter Your email" name="Name">
+							<input type="text" class="enter_email" placeholder="Nhập email" name="Name">
 						</div>
-						<button class="subscribr_bt">Subscribe</button>
+						<button class="subscribr_bt">Đăng kí</button>
 					</div>
 				</div>
 			</div>
