--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
-													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -470,12 +469,12 @@
 			<div class="footer_section_2">
 				<div class="row">
 					<div class="col-sm-4 col-lg-2">
-						<p class="dummy_text"> ipsum dolor sit amet, consectetur ipsum dolor sit amet, consectetur ipsum
-							dolor sit amet,</p>
+						<p class="dummy_text"> Chọn giày chọn phong cách tại Vũ Trụ Sneaker</p>
 					</div>
 					<div class="col-sm-4 col-lg-2">
 						<h2 class="shop_text">Địa chỉ</h2>
-						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên, khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
+						<div class="image-icon"><img src="images/map-icon.png"><span class="pet_text">Đường Hàn Thuyên,
+								khu phố 6 P, Thủ Đức, Thành phố Hồ Chí Minh</span></div>
 					</div>
 					<div class="col-sm-4 col-md-6 col-lg-3">
 						<h2 class="shop_text">Công ty của chúng tôi</h2>
