--- a/shoes.html
+++ b/shoes.html
@@ -75,7 +75,7 @@
     <div class="collection_section layout_padding">
         <div class="container">
             <h1 class="new_text"><strong>Sản phẩm mới về</strong></h1>
-            <p class="consectetur_text">Chọn giày chọn phong cách tại Vũ TRụ Sneaker</p>
+            <p class="consectetur_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker</p>
         </div>
     </div>
     <div class="layout_padding gallery_section">
