--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
-													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -138,8 +137,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
-													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
@@ -161,8 +159,7 @@
 											<div class="banner_taital">
 												<h1 class="banner_text">Giày chạy bộ mới</h1>
 												<h1 class="mens_text"><strong>Men's Like Plex</strong></h1>
-												<p class="lorem_text">ipsum dolor sit amet, consectetur adipiscing elit,
-													sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+												<p class="lorem_text">Chọn giày chọn phong cách tại Vũ Trụ Sneaker
 												</p>
 												<button class="buy_bt">Mua ngay</button>
 												<button class="more_bt">Xem thêm</button>
