--- a/index.html
+++ b/index.html
@@ -227,8 +227,7 @@
 	<div class="collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Giày chạy đua</strong></h1>
-			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="consectetur_text">một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô cùng chắc chắn và có khả năng hấp thụ va đập</p>
 		</div>
 	</div>
 	<div class="collectipn_section_3 layuot_padding">
