--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 	<div class="collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Giày chạy đua</strong></h1>
-			<p class="consectetur_text">một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô cùng chắc chắn và có khả năng hấp thụ va đập</p>
+			<p class="consectetur_text">Một đôi giày chạy bộ siêu nhẹ được thiết kế cho những cuộc đua với phần đệm vô cùng chắc chắn và có khả năng hấp thụ va đập.</p>
 		</div>
 	</div>
 	<div class="collectipn_section_3 layuot_padding">
