--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
 	<div class="layout_padding collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới</strong></h1>
-			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="consectetur_text">Dòng sản phẩm vừa mới ra mắt nhưng đã được những tín đồ sneaker phản hồi tích cực.</p>
 			<div class="collection_section_2">
 				<div class="row">
 					<div class="col-md-6">
@@ -250,8 +249,7 @@
 	<div class="collection_section layout_padding">
 		<div class="container">
 			<h1 class="new_text"><strong>Sản phẩm mới về</strong></h1>
-			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="consectetur_text">Nếu bạn có nhu cầu về những sản phẩm khác hãy liên hệ Vũ Trụ Sneaker để cập nhật hoặc hỏi mẫu và size giày nhé.</p>
 		</div>
 	</div>
 	<!-- new collection section end -->
