--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 						<div class="about-img">
 							<button class="new_bt">New</button>
 							<div class="shoes-img"><img src="images/shoes-img1.png"></div>
-							<p class="sport_text">Men Sports</p>
+							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
@@ -206,7 +206,7 @@
 					<div class="col-md-6">
 						<div class="about-img2">
 							<div class="shoes-img2"><img src="images/shoes-img2.png"></div>
-							<p class="sport_text">Men Sports</p>
+							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
@@ -237,10 +237,10 @@
 						<div class="shoes-img3"><img src="images/shoes-img3.png"></div>
 					</div>
 					<div class="col-md-4">
-						<div class="sale_text"><strong>Sale <br><span style="color: #0a0506;">JOGING</span>
-								<br>SHOES</strong></div>
+						<div class="sale_text"><strong>Giảm giá<br><span style="color: #0a0506;">Giày</span>
+								<br>Đi Bộ</strong></div>
 						<div class="number_text"><strong>$ <span style="color: #0a0506">100</span></strong></div>
-						<button class="seemore">See More</button>
+						<button class="seemore">Xem thêm</button>
 					</div>
 				</div>
 			</div>
