--- a/collection.html
+++ b/collection.html
@@ -73,15 +73,14 @@
 	<div class="layout_padding collection_section">
 		<div class="container">
 			<h1 class="new_text"><strong>Bộ sưu tập mới</strong></h1>
-			<p class="consectetur_text">consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-				dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+			<p class="consectetur_text"></p>
 			<div class="collection_section_2">
 				<div class="row">
 					<div class="col-md-6">
 						<div class="about-img">
-							<button class="new_bt">New</button>
+							<button class="new_bt">Mới</button>
 							<div class="shoes-img"><img src="images/shoes-img1.png"></div>
-							<p class="sport_text">Men Sports</p>
+							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
@@ -93,12 +92,12 @@
 								</ul>
 							</div>
 						</div>
-						<button class="seemore_bt">See More</button>
+						<button class="seemore_bt">Xem thêm</button>
 					</div>
 					<div class="col-md-6">
 						<div class="about-img2">
 							<div class="shoes-img2"><img src="images/shoes-img2.png"></div>
-							<p class="sport_text">Men Sports</p>
+							<p class="sport_text">Giày thể thao nam</p>
 							<div class="dolar_text">$<strong style="color: #f12a47;">90</strong> </div>
 							<div class="star_icon">
 								<ul>
